--- a/index.html
+++ b/index.html
@@ -245,7 +245,17 @@
         const mqttProtocol = isSecure ? 'wss' : 'ws';
         const mqttUrl = `${mqttProtocol}://test.mosquitto.org:${mqttPort}/mqtt`;
 
-        const client = mqtt.connect(mqttUrl, { keepalive: 60, reconnectPeriod: 2000 });
+        // const client = mqtt.connect(mqttUrl, { keepalive: 60, reconnectPeriod: 2000 });
+
+        const client = mqtt.connect("wss://test.mosquitto.org:8080/mqtt", {
+        protocol: "wss",
+        keepalive: 60,
+        reconnectPeriod: 2000,
+        connectTimeout: 10000,
+        clean: true,
+        protocolVersion: 4, // MQTT 3.1.1
+        });
+        
         const TOPIC = 'amana/water_level';
 
         function setConnectionStatus(status) {
